# serializer version: 1
# name: test_snapshot_emission_factor[FR]
  dict({
    'emissionFactors': dict({
      'defaults': dict({
        'battery charge': dict({
          'source': 'IPCC 2014',
          'value': 0,
        }),
        'battery discharge': dict({
          'source': 'IPCC 2014',
          'value': 48.2,
        }),
        'biomass': dict({
          'source': 'IPCC 2014',
          'value': 230.0,
        }),
        'coal': dict({
          'source': 'IPCC 2014',
          'value': 888.47,
        }),
        'gas': dict({
          'source': 'IPCC 2014',
          'value': 483.32,
        }),
        'geothermal': dict({
          'source': 'IPCC 2014',
          'value': 38,
        }),
        'hydro': dict({
          'source': 'IPCC 2014',
          'value': 10.7,
        }),
        'hydro charge': dict({
          'source': 'IPCC 2014',
          'value': 0,
        }),
        'hydro discharge': dict({
          'source': 'IPCC 2014',
          'value': 21.06,
        }),
        'nuclear': dict({
          'source': 'IPCC 2014',
          'value': 5.13,
        }),
        'oil': dict({
          'source': 'IPCC 2014',
          'value': 1093.33,
        }),
        'solar': dict({
          'source': 'IPCC 2014',
          'value': 30.075,
        }),
        'unknown': dict({
          'source': 'IPCC 2014',
          'value': 700,
        }),
        'wind': dict({
          'source': 'IPCC 2014',
          'value': 12.62,
        }),
      }),
      'zoneOverrides': dict({
      }),
    }),
  })
# ---
# name: test_snapshot_emission_factor[KR]
  dict({
    'emissionFactors': dict({
      'defaults': dict({
        'battery charge': dict({
          'source': 'IPCC 2014',
          'value': 0,
        }),
        'battery discharge': dict({
          'source': 'IPCC 2014',
          'value': 391.33,
        }),
        'biomass': dict({
          'source': 'IPCC 2014',
          'value': 230,
        }),
        'coal': dict({
          'source': 'IPCC 2014',
          'value': 820,
        }),
        'gas': dict({
          'source': 'IPCC 2014',
          'value': 490,
        }),
        'geothermal': dict({
          'source': 'IPCC 2014',
          'value': 38,
        }),
        'hydro': dict({
          'source': 'IPCC 2014',
          'value': 24,
        }),
        'hydro charge': dict({
          'source': 'IPCC 2014',
          'value': 0,
        }),
        'hydro discharge': dict({
          'source': 'IPCC 2014',
          'value': 377.42,
        }),
        'nuclear': dict({
          'source': 'IPCC 2014',
          'value': 12,
        }),
        'oil': dict({
          'source': 'IPCC 2014',
          'value': 650,
        }),
        'solar': dict({
          'source': 'IPCC 2014',
          'value': 45,
        }),
        'unknown': dict({
          'source': 'IPCC 2014',
          'value': 644,
        }),
        'wind': dict({
          'source': 'IPCC 2014',
          'value': 11,
        }),
      }),
      'zoneOverrides': dict({
      }),
    }),
  })
# ---
